--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "i18next": "^22.5.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -52,6 +54,12 @@
           "semi": true,
           "trailingComma": "all",
           "arrowParens": "avoid"
+        }
+      ],
+      "import/no-anonymous-default-export": [
+        2,
+        {
+          "allowObject": true
         }
       ]
     }
