--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "i18next": "^22.5.1",
+    "leo-profanity": "^1.7.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -21,6 +22,7 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "socket.io-client": "^4.6.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
