--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "frontend/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "startFront": "npx start-server -s ./frontend/build"
+    "build": "npm run build --prefix frontend",
+    "build-frontend": "npm ci && cd frontend && npm ci && npm run build",
+    "start": "npx start-server -s ./frontend/build",
+    "postinstall": "cd frontend && npm ci"
   },
   "repository": {
     "type": "git",
