--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -8,7 +8,6 @@ extends:
   - plugin:react/recommended
   - plugin:functional/recommended
   - plugin:react-hooks/recommended
-  - prettier
 
 parserOptions:
   ecmaFeatures:
@@ -19,7 +18,6 @@ parserOptions:
 plugins:
   - react
   - functional
-  - prettier
 
 rules:
   import/extensions: 0
@@ -34,17 +32,5 @@ rules:
   functional/no-try-statements: 0
   functional/no-throw-statements: 0
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
-  react/function-component-definition:
-    [2, { "namedComponents": "arrow-function" }]
+  react/function-component-definition: [2, { "namedComponents": "arrow-function" }]
   react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
-  prettier/prettier:
-    [
-      "error",
-      {
-        "singleQuote": true,
-        "printWidth": 100,
-        "semi": true,
-        "trailingComma": "all",
-        "arrowParens": "avoid",
-      },
-    ]
