--- a/package.json
+++ b/package.json
@@ -1,26 +1,63 @@
 {
   "name": "@hexlet/code",
-  "version": "1.0.0",
-  "description": "chat",
-  "main": "frontend/src/index.js",
+  "version": "0.0.1",
+  "description": "RSS-agregator",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build --prefix frontend",
-    "build-frontend": "npm ci && cd frontend && npm ci && npm run build",
-    "start": "npx start-server -s ./frontend/build",
-    "postinstall": "cd frontend && npm ci"
+    "test": "jest --colors",
+    "start": "webpack serve"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/VladimirAfanasievFS/frontend-project-12.git"
+    "url": "git+https://github.com/igshipilov/frontend-project-11.git"
   },
-  "author": "",
+  "author": "Igor Shipilov",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/VladimirAfanasievFS/frontend-project-12/issues"
+  "homepage": "https://github.com/igshipilov/frontend-project-11#readme",
+  "jest": {
+    "verbose": true,
+    "testEnvironmentOptions": {
+      "url": "http://localhost/"
+    },
+    "testEnvironment": "jsdom"
   },
-  "homepage": "https://github.com/VladimirAfanasievFS/frontend-project-12#readme",
+  "main": "src/init.js",
   "dependencies": {
-    "@hexlet/chat-server": "^1.1.6"
+    "@popperjs/core": "^2.11.8",
+    "ajv": "^8.12.0",
+    "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "npm-check-updates": "^16.10.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.23.9",
+    "babel-jest": "^29.3.1",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "debug": "^4.3.4",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.2.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.6.0",
+    "jest-cli": "^29.6.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss-loader": "^8.1.0",
+    "postcss-preset-env": "^7.8.3",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
+    "style-loader": "^3.3.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.1"
+  },
+  "bugs": {
+    "url": "https://github.com/igshipilov/frontend-project-11/issues"
   }
 }
